--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
     "README.md"
   ],
   "devDependencies": {
-    "rollup": "^1.27.13",
+    "sirv-cli": "^0.4.4",
+    "rollup": "^1.31.0",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "^5.1.1",
-    "svelte": "^3.16.5"
+    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-terser": "^5.2.0",
+    "svelte": "^3.18.1"
   },
   "dependencies": {
     "resize-observer-polyfill": "^1.5.1"
   },
   "scripts": {
     "build": "rollup -c",
-    "prepublishOnly": "npm run build"
+    "dev": "rollup -c -w",
+    "start": "sirv public"
   },
   "bugs": {
     "url": "https://github.com/andrelmlins/svelte-resize-observer/issues"
