--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
-  - "8"
   - "10"
+  - "12"
 cache: yarn
 
 install: yarn
@@ -10,9 +10,11 @@ script:
 
 jobs:
   include:
+    - stage: test
+      script: yarn coverage
     - stage: npm release
       if: tag IS present
-      node_js: "8"
+      node_js: "10"
       script: yarn build
       deploy:
         provider: npm
