--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
   "name": "svelte-resize-observer",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Element resize observer to Svelte",
   "repository": "https://github.com/andrelmlins/svelte-resize-observer",
   "author": "André Lins <andrelucas01@hotmail.com> (https://andrelmlins.github.io/)",
-  "svelte": "src/lib/ResizeObserver.svelte",
+  "svelte": "dist/ResizeObserver.svelte",
   "module": "dist/index.mjs",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "homepage": "https://svelte-resize-observer.netlify.com/",
   "files": [
-    "src/lib/ResizeObserver.svelte",
     "dist",
     "README.md"
   ],
   "devDependencies": {
     "@babel/core": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
+    "@rollup/plugin-typescript": "^8.2.5",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/svelte": "^3.0.0",
+    "@tsconfig/svelte": "^2.0.1",
     "babel-jest": "^26.3.0",
     "jest": "^26.4.0",
     "rollup": "^2.26.0",
@@ -28,14 +30,20 @@
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "sirv-cli": "^1.0.0",
-    "svelte": "^3.24.0",
-    "svelte-jester": "^1.1.0"
+    "svelte": "^3.32.0",
+    "svelte-dts": "^0.3.4",
+    "svelte-jester": "1.1.5",
+    "svelte-preprocess": "^4.7.4",
+    "svelte-transpile-typescript": "^0.1.2",
+    "ts-jest": "^27.0.4",
+    "tslib": "^2.3.1",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "resize-observer-polyfill": "^1.5.1"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "rollup -c && svelte-transpile-typescript -i src/lib/ResizeObserver.svelte -o dist/ResizeObserver.svelte",
     "dev": "rollup -c -w",
     "start": "sirv public",
     "test": "jest src/lib",
@@ -50,7 +58,13 @@
     ],
     "transform": {
       "^.+\\.js$": "babel-jest",
-      "^.+\\.svelte$": "svelte-jester"
+      "^.+\\.svelte$": [
+        "svelte-jester",
+        {
+          "preprocess": true
+        }
+      ],
+      "^.+\\.ts$": "ts-jest"
     },
     "moduleFileExtensions": [
       "js",
